--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,4 +1,7 @@
 github_repos:
   - Arjun-Vijay/Arjun-Vijay.github.io
-  - arjun-vijay/Business-Card-Parser
-  - arjun-vijay/Human-Zombie-Game-Simulator
+  - Arjun-Vijay/Business-Card-Parser
+  - Arjun-Vijay/Recipe-Finder
+  - Arjun-Vijay/xv6-public
+  - Arjun-Vijay/Project-Euler
+  - Arjun-Vijay/Human-Zombie-Game-Simulator
