--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 title: Arjun Vijay # the website title (if blank, full name will be used instead)
 first_name: Arjun
 last_name: Vijay
-email: arjunvkr@gmail.com
+email: avijay3@jhu.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Arjun Vijay Portfolio Website
 footer_text: >
